--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           </ul>
 
           <ul class="verse" id="verse4">
-            <li class="line" id="line1">The clock ticks onward, hours pile high,</li>
-            <li class="line" id="line2">Full-time or part-time, the gap won't shy.</li>
-            <li class="line" id="line3">More hours should mean more dollars earned,</li>
-            <li class="line" id="line4">Yet women's extra efforts often go unreturned.</li>
+            <li class="line" id="line1">Full-time or part-time, the numbers don't lie,</li>
+            <li class="line" id="line2">Similar hours, yet wages don't comply.</li>
+            <li class="line" id="line3">Men's pay outpaces at every stage,</li>
+            <li class="line" id="line4">The gap most glaring at full-time wage.</li>
           </ul>
           
           <ul class="verse" id="verse5">
