Refactor Code for consistency

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="filler-verse"></div>
           
           <ul class="verse" id="verse1">
-            <li class="line" id="line1">From '99 to 2013, the numbers tell,</li>
+            <li class="line" id="line1">From '81 to 2013, the numbers tell,</li>
             <li class="line" id="line2">A story of wages, some rise, some fell.</li>
             <li class="line" id="line3">For men, the pay climbs steadier year by year,</li>
             <li class="line" id="line4">While women's wages rise slower – the gap persists here.</li>
@@ -69,6 +69,13 @@
       <button class="arrow-button" id="backward-button">◄</button>
       <button class="arrow-button" id="forward-button">►</button>
     </footer>
+    <script src="chartNavigation.js"></script>
+    <script src="data.js"></script>
+    <script src="lineChart.js"></script>
+    <script src="verticalBar.js"></script>
+    <script src="horizontalBar.js"></script>
+    <script src="stackedBar.js"></script>
+    <script src="boxPlot.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
